# machine-learning

./: .gitignore
Machine Learning Andrew/: main.py  pyproject.toml
Machine Learning Andrew/Supervised Machine Learning - Regression and Classification/: lab_utils_common.py  lab_utils_multi.py  lab_utils_uni.py
Machine Learning Andrew/Supervised Machine Learning - Regression and Classification/Week 1 Introduction to Machine Learning/: C1_W1_Lab01_Python_Jupyter_Soln.ipynb  C1_W1_Lab03_Model_Representation_Soln.ipynb  C1_W1_Lab04_Cost_function_Soln.ipynb  C1_W1_Lab05_Gradient_Descent_Soln.ipynb
Machine Learning at RMIT/: .gitignore  main.py  pyproject.toml
Machine Learning at RMIT/W1_Foundations_of_ML/: lecture_note.md  w1_lecture_notes.md  week01_lab_exercises_python-1.ipynb
Machine Learning at RMIT/W2_Regression/: bike_share_data.ipynb  house_predicting.ipynb  mlpda_Chp7_complete_notes.md  w2_lecture_notes.md
Machine Learning at RMIT/W3_Logistic_Regression_and_Regularisation/: take_note.md
Machine Learning at RMIT/week2/: bikeShareDay_code_book.docx  house_predicting.ipynb
Python For Machine Learning IBM/: .gitignore  Logistic-Regression-v1.ipynb  git_nested_repo_powershell_notes.md  main.py  pyproject.toml  python_ml_environment_notes_final.md  python_uv_venv_jupyter_notes_updated.md
Python For Machine Learning IBM/linear_logistic_regression/: Logistic-Regression-v1.ipynb  Mulitple-Linear-Regression-v1.ipynb  Simple-Linear-Regression-v1.ipynb
(+6 files in other folders)
