[project]
name = "python-for-machine-learning-ibm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib==3.9.3",
    "numpy==2.2.0",
    "pandas==2.2.3",
    "scikit-learn==1.6.0",
]
